--- a/style.css
+++ b/style.css
@@ -32,6 +32,20 @@ body {
 	color: #222;
 }
 
+figure {
+	margin: 0;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+a {
+	text-decoration: none;
+	color: goldenrod;
+}
+
 .access-hidden {
 	clip: rect(0 0 0 0);
 	clip-path: inset(50%);
@@ -42,18 +56,18 @@ body {
 	width: 1px;
 }
 
-.header {
-	background-color: #222;
-	padding: 15px 0;
-}
-
-.header .inner_wrap {
+.inner_wrap {
 	display: flex;
 	flex-flow: row wrap;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: space-between;
 	max-width: 75rem;
 	margin: 0 auto;
+}
+
+.header {
+	background-color: #222;
+	padding: 15px 0;
 }
 
 .navigation {
@@ -118,5 +132,127 @@ button.icon {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	font-size: 4rem;
-	font-weight: 400;
+	font-weight: 300;
+}
+
+.main-content .inner_wrap {
+	border-bottom: 1px solid #eaeaea;
+	padding: 0 0 4rem;
+	margin: 0 auto 4rem;
+}
+
+.secondary-header {
+	font-size: 3rem;
+	font-weight: 300;
+	letter-spacing: 1px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.secondary-header::after {
+	content: "";
+	display: block;
+	border-bottom: 1px solid #222;
+	width: 200px;
+	padding-top: 1rem;
+	margin: 0 auto;
+}
+
+.tertiary-header {
+	font-size: 2rem;
+	font-weight: 300;
+	letter-spacing: 1px;
+	text-align: center;
+	text-transform: uppercase;
+	margin-bottom: 0;
+}
+
+.desc {
+	text-transform: uppercase;
+	text-align: center;
+	letter-spacing: 1px;
+}
+
+.one-half {
+	position: relative;
+	flex: 0 0 49%;
+}
+
+.image.one-half {
+	max-width: 100%;
+	height: 0;
+	padding-bottom: 33%;
+}
+
+.one-half img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.social-nav .inner_wrap {
+	padding: 0;
+	margin: 0 auto;
+	list-style-type: none;
+	justify-content: center;
+}
+
+.social {
+	margin-bottom: 10rem;
+}
+
+.social li {
+	margin: 0 5px;
+}
+
+.social a {
+	display: block;
+	padding: 14px;
+}
+
+.social svg {
+	display: block;
+	width: 20px;
+	height: 20px;
+	fill: goldenrod;
+}
+
+.instagram-feed {
+	margin-top: 3rem;
+}
+
+.instagram-feed ul {
+	display: flex;
+	flex-flow: row nowrap;
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+
+.instagram li {
+	position: relative;
+	flex: 0 0 16.667%;
+	max-width: 100%;
+	height: 0;
+	padding-bottom: 16.667%;
+}
+
+.instagram img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.footer {
+	background-color: #222;
+	padding: 15px 0;
+	color: #bbb;
+	text-transform: uppercase;
+	letter-spacing: 2px;
 }
