--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ body {
 	color: #222;
 }
 
+body.active {
+	overflow-y: hidden;
+}
+
 figure {
 	margin: 0;
 }
@@ -73,6 +77,7 @@ a {
 
 .header .inner_wrap {
 	padding: 0 15px;
+	align-items: center;
 }
 
 .navigation {
@@ -141,6 +146,7 @@ a {
 }
 
 button.icon {
+	cursor: pointer;
 	appearance: none;
 	border: none;
 	background: none;
@@ -151,21 +157,20 @@ button.icon {
 
 button.menu {
 	display: none;
-	cursor: pointer;
 
 	@media (max-width: 960px) {
 		display: block;
 	}
 }
 
-button.menu.active {
+button.icon.active {
 	position: relative;
 	top: 0;
 	left: 0;
 	z-index: 2;
 }
 
-.menu.active svg {
+button.icon.active svg {
 	display: block;
 	stroke: #222;
 	pointer-events: none;
@@ -173,6 +178,66 @@ button.menu.active {
 
 .icon svg {
 	stroke: #fff;
+}
+
+.search-drawer {
+	position: fixed;
+	top: 0;
+	right: -100%;
+	width: 100%;
+	height: 100%;
+	background-color: #fff;
+	z-index: 1;
+	transition: right 300ms ease-in-out;
+}
+
+.search-drawer.active {
+	right: 0;
+}
+
+.search-drawer .form {
+	width: 100%;
+	position: relative;
+	top: 33%;
+}
+
+.search-drawer label {
+	width: 100%;
+}
+
+.search-drawer input[type="search"] {
+	flex: 0 0 84.5%;
+	padding: 2rem;
+	appearance: none;
+	border: 2px solid #ddd;
+	border-radius: 5px;
+}
+
+.search-drawer input[type="submit"] {
+	flex: 0 0 14.5%;
+	padding: 2rem;
+	appearance: none;
+	border: 2px solid goldenrod;
+	border-radius: 5px;
+	background-color: goldenrod;
+	cursor: pointer;
+	color: #222;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	transition: background-color 300ms ease-in-out;
+}
+
+.search-drawer input[type="submit"]:active,
+.search-drawer input[type="submit"]:hover {
+	background-color: #fff;
+}
+
+@media screen and (max-width: 960px) {
+	.search-drawer .form input {
+		flex: 0 0 100%;
+		padding: 1rem;
+		margin-bottom: 0.5rem;
+	}
 }
 
 .hero {
