--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ a {
 .header {
 	position: relative;
 	background-color: #222;
-	padding: 15px 0;
+	padding: 0;
 }
 
 .header .inner_wrap {
@@ -120,7 +120,8 @@ a {
 	}
 }
 
-.navigation li {
+.navigation ul li {
+	position: relative;
 	display: list-item;
 
 	@media (max-width: 960px) {
@@ -131,8 +132,9 @@ a {
 	}
 }
 
-.navigation li a {
+.navigation ul li a {
 	display: block;
+	padding: 1rem 0.5rem;
 	font-size: 0.9375rem;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -143,6 +145,53 @@ a {
 		padding: 12px 27px;
 		color: #222;
 	}
+}
+
+/* screen reader friendly way to hide */
+.navigation ul li .sub-nav {
+	clip-path: inset(50%);
+	position: absolute;
+	overflow: hidden;
+	width: 1px;
+	height: 1px;
+}
+
+.navigation ul li .sub-nav li {
+	display: block;
+	width: 100%;
+}
+
+.navigation ul li .sub-nav a {
+	display: block;
+	width: 100%;
+	padding: 1rem;
+	background-color: #fff;
+	border-bottom: 1px solid #eaeaea;
+	color: #222;
+	transition: background-color 300ms ease-in-out;
+}
+
+.navigation ul li .sub-nav li:last-of-type a {
+	border-bottom: none;
+}
+
+.navigation ul li .sub-nav a:hover,
+.navigation ul li .sub-nav a:active {
+	background-color: goldenrod;
+}
+
+.navigation ul li:hover > .sub-nav,
+.navigation ul li:active > .sub-nav,
+.navigation ul li > .sub-nav:focus-within,
+.navigation ul li a:focus + .sub-nav {
+	clip-path: none;
+	overflow: visible;
+	position: absolute;
+	top: 100%;
+	left: -0.5rem;
+	width: 200px;
+	height: auto;
+	z-index: 1;
 }
 
 button.icon {
@@ -243,7 +292,7 @@ button.icon.active svg {
 .hero {
 	position: relative;
 	width: 100%;
-	height: 400px;
+	height: 30vh;
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
@@ -274,6 +323,11 @@ button.icon.active svg {
 	border-bottom: 1px solid #eaeaea;
 	padding: 0 0 4rem;
 	margin: 0 auto 4rem;
+
+	@media (max-width: 960px) {
+		padding: 0 0 1rem;
+		margin: 0 auto 1rem;
+	}
 }
 
 .secondary-header {
@@ -282,6 +336,10 @@ button.icon.active svg {
 	letter-spacing: 1px;
 	text-align: center;
 	text-transform: uppercase;
+
+	@media (max-width: 960px) {
+		font-size: 8vw;
+	}
 }
 
 .secondary-header::after {
@@ -311,12 +369,22 @@ button.icon.active svg {
 .one-half {
 	position: relative;
 	flex: 0 0 49%;
+	padding: 0;
+
+	@media (max-width: 960px) {
+		flex: 0 0 calc(100% - 2rem);
+		margin: 1rem;
+	}
 }
 
 .image.one-half {
 	max-width: 100%;
 	height: 0;
 	padding-bottom: 33%;
+
+	@media (max-width: 960px) {
+		padding-bottom: 56.25%;
+	}
 }
 
 .one-half img {
@@ -337,6 +405,10 @@ button.icon.active svg {
 
 .social {
 	margin-bottom: 10rem;
+
+	@media (max-width: 960px) {
+		margin-bottom: 1rem;
+	}
 }
 
 .social li {
@@ -365,14 +437,23 @@ button.icon.active svg {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
+
+	@media (max-width: 960px) {
+		flex-flow: row wrap;
+	}
 }
 
 .instagram li {
 	position: relative;
-	flex: 0 0 16.667%;
+	flex: 0 0 16.666%;
 	max-width: 100%;
 	height: 0;
 	padding-bottom: 16.667%;
+
+	@media (max-width: 960px) {
+		flex: 0 0 33.333%;
+		padding-bottom: 33.333%;
+	}
 }
 
 .instagram img {
@@ -386,8 +467,23 @@ button.icon.active svg {
 
 .footer {
 	background-color: #222;
-	padding: 15px 0;
+	padding: 15px;
 	color: #bbb;
 	text-transform: uppercase;
 	letter-spacing: 2px;
+}
+
+.footer .inner_wrap {
+	@media (max-width: 960px) {
+		flex-flow: column wrap;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+	}
+}
+
+.footer span {
+	@media (max-width: 960px) {
+		display: block;
+	}
 }
