--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a {
 
 .navigation {
 	position: static;
-	flex: 0 0 60%;
+	flex: 0 0 70%;
 
 	@media (max-width: 960px) {
 		position: absolute;
@@ -121,17 +121,25 @@ a {
 
 .navigation ul li a {
 	display: block;
-	padding: 1rem 0.5rem;
+	padding: 1rem;
 	font-size: 0.9375rem;
 	text-decoration: none;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	color: #fff;
+	transition: background-color 300ms ease-in-out;
 
 	@media (max-width: 960px) {
 		padding: 12px 27px;
 		color: #222;
 	}
+}
+
+.navigation ul li:hover > a,
+.navigation ul li:active > a,
+.navigation ul li a.active {
+	background-color: goldenrod;
+	color: #222;
 }
 
 /* screen reader friendly way to hide */
@@ -175,7 +183,7 @@ a {
 	overflow: visible;
 	position: absolute;
 	top: 100%;
-	left: -0.5rem;
+	left: 0;
 	width: 200px;
 	height: auto;
 	z-index: 1;
