--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a {
 	}
 }
 
-.navigation ul {
+.navigation > ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -162,6 +162,9 @@ a {
 
 /* screen reader friendly way to hide */
 .navigation ul li .sub-nav {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 	clip-path: inset(50%);
 	position: absolute;
 	overflow: hidden;
@@ -207,6 +210,10 @@ a {
 	height: auto;
 	z-index: 1;
 }
+
+/* begin mobile navigation styles */
+
+/* begin mobile navigation styles */
 
 button.icon {
 	cursor: pointer;
