--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ a {
 	position: relative;
 	background-color: #222;
 	padding: 0;
+
+	@media (max-width: 960px) {
+		padding: 4px 0;
+	}
 }
 
 .header .inner_wrap {
@@ -72,7 +76,7 @@ a {
 	flex: 0 0 80%;
 
 	@media (max-width: 960px) {
-		position: absolute;
+		position: fixed;
 		top: -15px;
 		left: -300px;
 		width: 300px;
@@ -91,7 +95,7 @@ a {
 	}
 }
 
-.navigation ul {
+.navigation > ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -101,9 +105,11 @@ a {
 	justify-content: space-between;
 
 	@media (max-width: 960px) {
-		margin: 5rem 0 0;
-		flex-flow: column wrap;
+		margin: 4rem 0 0;
+		flex-flow: column nowrap;
 		align-items: flex-start;
+		max-height: 90vh;
+		overflow-y: scroll;
 	}
 }
 
@@ -135,17 +141,20 @@ a {
 	}
 }
 
-.navigation ul li a + .sub-nav::after {
-	content: "X";
-	color: #fff;
-	clip-path: none;
-	overflow: visible;
-	position: absolute;
-	top: 100%;
-	left: 0;
-	width: 200px;
-	height: auto;
-	z-index: 1;
+.navigation ul li svg {
+	display: inline-block;
+	vertical-align: middle;
+	width: 20px;
+	height: 20px;
+	stroke: #fff;
+	transition: stroke 300ms ease-in-out;
+}
+
+.navigation ul li:hover svg,
+.navigation ul li:active svg,
+.navigation ul li a:focus svg,
+.navigation ul li:focus-within svg {
+	stroke: #222;
 }
 
 .navigation ul li:hover > a,
@@ -159,6 +168,9 @@ a {
 
 /* screen reader friendly way to hide */
 .navigation ul li .sub-nav {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 	clip-path: inset(50%);
 	position: absolute;
 	overflow: hidden;
@@ -205,6 +217,40 @@ a {
 	z-index: 1;
 }
 
+/* mobile sub menu styles start here */
+.navigation a {
+	@media (max-width: 960px) {
+		border-bottom: 1px solid #eaeaea;
+	}
+}
+
+.navigation ul li svg {
+	@media (max-width: 960px) {
+		stroke: #222;
+	}
+}
+
+.navigation ul li .sub-nav {
+	@media (max-width: 960px) {
+		clip-path: none;
+		overflow: visible;
+		position: static;
+		top: 100%;
+		left: 0;
+		width: 100%;
+		height: auto;
+		padding-left: 2rem;
+		z-index: 1;
+	}
+}
+
+.navigation ul li .sub-nav li:last-of-type a {
+	@media (max-width: 960px) {
+		border-bottom: 1px solid #eaeaea;
+	}
+}
+/* mobile sub menu styles end here */
+
 button.icon {
 	cursor: pointer;
 	appearance: none;
@@ -230,6 +276,10 @@ button.icon.active {
 	z-index: 2;
 }
 
+button.search.active {
+	z-index: 3;
+}
+
 button.icon.active svg {
 	display: block;
 	stroke: #222;
@@ -247,7 +297,7 @@ button.icon.active svg {
 	width: 100%;
 	height: 100%;
 	background-color: #fff;
-	z-index: 1;
+	z-index: 2;
 	transition: right 300ms ease-in-out;
 }
 
